test/org/midica/testfiles/failing/sk-in-function.midica
INCLUDE inc/instruments.midica

FUNCTION test
	SOFT_KARAOKE
	END
END